--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 AC_PREREQ([2.57])
-AC_INIT(lxde-icon-theme,[0.5.0], [],lxde-icon-theme)
+AC_INIT(lxde-icon-theme,[0.5.1], http://lxde.org)
 AM_INIT_AUTOMAKE([dist-xz no-dist-gzip])
 dnl AC_PROG_INTLTOOL(, [no-xml])
 dnl AM_MAINTAINER_MODE
